--- a/test.org
+++ b/test.org
@@ -2,18 +2,18 @@
 
 Rather than using my personal agenda every time I want to take a screenshot, how about this.
 
-** TODAY [#A] Take over the world
+** TODAY [#A] Take over the world                                    :world:
 DEADLINE: <2017-07-28 Fri -1m>
 
 I'd like to be finished with this before the weekend...
 
 ** TODO [#A] Skype with president of Antarctica             :world:meetings:
-SCHEDULED: <2017-07-24 Mon 21:00>
+SCHEDULED: <2017-07-25 Tue 21:00>
 
 Not sure what his timezone is...
 
 ** TODO Order a pizza                                          :food:dinner:
-SCHEDULED: <2017-07-24 Mon 18:00>
+SCHEDULED: <2017-07-25 Tue 18:00>
 
 ** SOMEDAY Rewrite Emacs in Common Lisp :Emacs:elisp:computers:software:programming:
 DEADLINE: <2017-07-26 Wed>
@@ -25,7 +25,7 @@ DEADLINE: <2017-07-26 Wed>
 I mean, since no one has ever tried doing it before...
 
 ** CHECK /r/emacs                                            :website:Emacs:
-SCHEDULED: <2017-07-29 Sat -1m>
+DEADLINE: <2017-08-25 Fri -2m>
 :LOGBOOK:
 -  State "CHECK"      from              [2017-07-24 Mon 19:00]
 :END:
@@ -39,17 +39,22 @@ SCHEDULED: <2017-06-27 Tue>
 Just waiting on that callback from NASA...
 
 ** TODO [#C] Get haircut                                    :personal:@town:
-SCHEDULED: <2017-07-25 Tue -1m>
+SCHEDULED: <2017-07-25 Tue>
 
 Should probably do this before I take over the world.  Want to look my best.  (Not that it will matter once I'm in charge.)
 
-** TODO [#A] Internet                                                :bills:
+** TODO [#B] Internet                                                :bills:
 DEADLINE: <2017-08-21 Mon -1m>
 
-** TODO [#A] Spaceship lease                                         :bills:
+** TODO [#A] Spaceship lease                               :bills:spaceship:
 DEADLINE: <2017-07-26 Wed +1m>
 
-** TODO Practice leaping tall buildings in a single bound
+** TODO [#A] Fix flux capacitor                                  :spaceship:
+SCHEDULED: <2017-07-22 Sat>
+
+If I don't, the frobnicator will probably fall off halfway to Mars...
+
+** TODO Practice leaping tall buildings in a single bound         :personal:
 SCHEDULED: <2017-07-24 Mon +2d>
 :PROPERTIES:
 :STYLE:    habit
@@ -58,8 +63,8 @@ SCHEDULED: <2017-07-24 Mon +2d>
 ** TODO [#B] Renew membership in supervillain club
 DEADLINE: <2017-07-24 Mon>
 
-** TODO Shop for groceries
-SCHEDULED: <2017-07-24 Mon>
+** TODO Shop for groceries                                            :food:
+SCHEDULED: <2017-07-17 Mon>
 
 * Code
 
@@ -75,29 +80,38 @@ SCHEDULED: <2017-07-24 Mon>
   ;; After
   (let ((org-agenda-files (list "~/src/org-super-agenda/test.org"))
         (org-agenda-custom-commands
-         (list '("u" "SUPER Agenda"
-                 org-super-agenda ""
-                 ((org-agenda-super-filters '(
-                                              ;; Optionally specify the section name
-                                              (:name "Schedule" :fn osa/filter-time)
-                                              (:name "Bills" :fn osa/filter-any-tag
-                                                     ;; One arg may be given alone, without a list
-                                                     :args "bills")
-                                              ;; This function needs no args so it may be specified like this
-                                              osa/filter-habit
-                                              ;; Filter functions supply their own section names when none are given
-                                              (:fn osa/filter-todo-keyword :args "WAITING")
-                                              (:fn osa/filter-todo-keyword
-                                                   ;; Multiple args given in a list
-                                                   :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                                                   ;; Show this section at the end of the agenda.  If you specified
-                                                   ;; this filter last, items with these todo keywords that have
-                                                   ;; priority A, B, or C would be displayed in those sections
-                                                   ;; instead, because items are filtered out in the order the
-                                                   ;; filters are listed.
-                                                   :last t)
-                                              (:fn osa/filter-priority :args "A")
-                                              (:fn osa/filter-priority :args ("B" "C"))))
-                  (org-agenda-span 'day))))))
+         '(("u" "SUPER Agenda"
+            org-super-agenda ""
+            ((org-agenda-span 'day)
+             (org-agenda-super-filters
+              '(
+                ;; Optionally specify the section name
+                (:name "Today"
+                       ;; The OR filter accepts a list of other filters
+                       :fn osa/filter-or
+                       :args (osa/filter-time
+                              (:fn osa/filter-todo-keyword :args "TODAY")))
+                (:name "Important"
+                       :fn osa/filter-or
+                       :args ((:fn osa/filter-any-tag :args "bills")
+                              (:fn osa/filter-priority :args "A")))
+                (:name "Food-related"
+                       :fn osa/filter-any-tag :args ("food" "dinner"))
+                (:name "Personal"
+                       :fn osa/filter-or
+                       :args (osa/filter-habit
+                              (:fn osa/filter-any-tag :args "personal")))
+                ;; Filter functions supply their own section names when none are given
+                (:fn osa/filter-todo-keyword :args "WAITING")
+                (:fn osa/filter-todo-keyword
+                     ;; Multiple args given in a list
+                     :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
+                     ;; Show this section at the end of the agenda.  If you specified
+                     ;; this filter last, items with these todo keywords that have
+                     ;; priority A, B, or C would be displayed in those sections
+                     ;; instead, because items are filtered out in the order the
+                     ;; filters are listed.
+                     :last t)
+                (:fn osa/filter-priority :args ("B" "C")))))))))
     (org-agenda nil "u"))
 #+END_SRC
