--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * org-super-agenda
 
-This is a prototype for a "supercharged" Org daily/weekly agenda.  The idea is to group items into sections, rather than having them all in one big list.
+This package lets you "supercharge" your Org daily/weekly agenda.  The idea is to group items into sections, rather than having them all in one big list.
 
 Now you can sort-of do this already with custom agenda commands, but when you do that, you lose the daily/weekly aspect of the agenda: items are no longer shown based on deadline/scheduled timestamps, but are shown no-matter-what.
 
@@ -22,12 +22,14 @@ The ~org-super-agenda~ command works as a custom agenda command, so you can add 
                        ;; The OR filter accepts a list of other filters
                        :fn osa/filter-or
                        :args (osa/filter-time
+                              ;; Single arg given by itself
                               (:fn osa/filter-todo-keyword :args "TODAY")))
                 (:name "Important"
                        :fn osa/filter-or
                        :args ((:fn osa/filter-any-tag :args "bills")
                               (:fn osa/filter-priority :args "A")))
                 (:name "Food-related"
+                       ;; Multiple args given in a list
                        :fn osa/filter-any-tag :args ("food" "dinner"))
                 (:name "Personal"
                        :fn osa/filter-or
@@ -36,7 +38,6 @@ The ~org-super-agenda~ command works as a custom agenda command, so you can add 
                 ;; Filter functions supply their own section names when none are given
                 (:fn osa/filter-todo-keyword :args "WAITING")
                 (:fn osa/filter-todo-keyword
-                     ;; Multiple args given in a list
                      :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
                      ;; Show this section at the end of the agenda.  If you specified
                      ;; this filter last, items with these todo keywords that have
