--- a/test.org
+++ b/test.org
@@ -90,12 +90,14 @@ SCHEDULED: <2017-07-17 Mon>
                        ;; The OR filter accepts a list of other filters
                        :fn osa/filter-or
                        :args (osa/filter-time
+                              ;; Single arg given by itself
                               (:fn osa/filter-todo-keyword :args "TODAY")))
                 (:name "Important"
                        :fn osa/filter-or
                        :args ((:fn osa/filter-any-tag :args "bills")
                               (:fn osa/filter-priority :args "A")))
                 (:name "Food-related"
+                       ;; Multiple args given in a list
                        :fn osa/filter-any-tag :args ("food" "dinner"))
                 (:name "Personal"
                        :fn osa/filter-or
@@ -104,7 +106,6 @@ SCHEDULED: <2017-07-17 Mon>
                 ;; Filter functions supply their own section names when none are given
                 (:fn osa/filter-todo-keyword :args "WAITING")
                 (:fn osa/filter-todo-keyword
-                     ;; Multiple args given in a list
                      :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
                      ;; Show this section at the end of the agenda.  If you specified
                      ;; this filter last, items with these todo keywords that have
