Add comment to examples

--- a/README.org
+++ b/README.org
@@ -37,7 +37,10 @@ The ~org-super-agenda~ command works as a custom agenda command, so you can add 
                 (:name "Today"
                        ;; The OR filter accepts a list of other filters
                        :fn osa/filter-or
-                       :args (osa/filter-time
+                       :args (
+                              ;; The filter-time filter doesn't require
+                              ;; arguments, so it can be given by itself
+                              osa/filter-time
                               ;; Single arg given by itself
                               (:fn osa/filter-todo-keyword :args "TODAY")))
                 (:name "Important"
