--- a/test.org
+++ b/test.org
@@ -88,34 +88,34 @@ SCHEDULED: <2017-07-17 Mon>
                 ;; Optionally specify the section name
                 (:name "Today"
                        ;; The OR filter accepts a list of other filters
-                       :fn osa/filter-or
+                       :filter osa/filter-or
                        :args (
                               ;; The filter-time filter doesn't require
                               ;; arguments, so it can be given by itself
                               osa/filter-time
                               ;; Single arg given by itself
-                              (:fn osa/filter-todo-keyword :args "TODAY")))
+                              (:filter osa/filter-todo-keyword :args "TODAY")))
                 (:name "Important"
-                       :fn osa/filter-or
-                       :args ((:fn osa/filter-any-tag :args "bills")
-                              (:fn osa/filter-priority :args "A")))
+                       :filter osa/filter-or
+                       :args ((:filter osa/filter-any-tag :args "bills")
+                              (:filter osa/filter-priority :args "A")))
                 (:name "Food-related"
                        ;; Multiple args given in a list
-                       :fn osa/filter-any-tag :args ("food" "dinner"))
+                       :filter osa/filter-any-tag :args ("food" "dinner"))
                 (:name "Personal"
-                       :fn osa/filter-or
+                       :filter osa/filter-or
                        :args (osa/filter-habit
-                              (:fn osa/filter-any-tag :args "personal")))
+                              (:filter osa/filter-any-tag :args "personal")))
                 ;; Filter functions supply their own section names when none are given
-                (:fn osa/filter-todo-keyword :args "WAITING")
-                (:fn osa/filter-todo-keyword
-                     :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                     ;; Show this section at the end of the agenda.  If you specified
-                     ;; this filter last, items with these todo keywords that have
-                     ;; priority A, B, or C would be displayed in those sections
-                     ;; instead, because items are filtered out in the order the
-                     ;; filters are listed.
-                     :last t)
-                (:fn osa/filter-priority :args ("B" "C")))))))))
+                (:filter osa/filter-todo-keyword :args "WAITING")
+                (:filter osa/filter-todo-keyword
+                         :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
+                         ;; Show this section at the end of the agenda. If you specified
+                         ;; this filter last, items with these todo keywords that have
+                         ;; priority A, B, or C would be displayed in those sections
+                         ;; instead, because items are filtered out in the order the
+                         ;; filters are listed.
+                         :last t)
+                (:filter osa/filter-priority :args ("B" "C")))))))))
     (org-agenda nil "u"))
 #+END_SRC
