--- a/README.org
+++ b/README.org
@@ -31,40 +31,30 @@ Here's the code for the example above.  The ~org-super-agenda~ command works as 
          '(("u" "SUPER Agenda"
             org-super-agenda ""
             ((org-agenda-span 'day)
-             (org-agenda-super-filters
-              '(
-                ;; Optionally specify the section name
-                (:name "Today"
-                       ;; The OR filter accepts a list of other filters
-                       :filter osa/filter-or
-                       :args (
-                              ;; The filter-time filter doesn't require
-                              ;; arguments, so it can be given by itself
-                              osa/filter-time
-                              ;; Single arg given by itself
-                              (:filter osa/filter-todo-keyword :args "TODAY")))
-                (:name "Important"
-                       :filter osa/filter-or
-                       :args ((:filter osa/filter-any-tag :args "bills")
-                              (:filter osa/filter-priority :args "A")))
-                (:name "Food-related"
-                       ;; Multiple args given in a list
-                       :filter osa/filter-any-tag :args ("food" "dinner"))
-                (:name "Personal"
-                       :filter osa/filter-or
-                       :args (osa/filter-habit
-                              (:filter osa/filter-any-tag :args "personal")))
-                ;; Filter functions supply their own section names when none are given
-                (:filter osa/filter-todo-keyword :args "WAITING")
-                (:filter osa/filter-todo-keyword
-                         :args ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                         ;; Show this section at the end of the agenda.  If you specified
-                         ;; this filter last, items with these todo keywords that have
-                         ;; priority A, B, or C would be displayed in those sections
-                         ;; instead, because items are filtered out in the order the
-                         ;; filters are listed.
-                         :last t)
-                (:filter osa/filter-priority :args ("B" "C")))))))))
+             (org-agenda-groups '(;; Each group has an implicit boolean OR operator between its selectors.
+                                  (:name "Today"  ; Optionally specify section name
+                                         :time t  ; Items that have a time associated
+                                         :todo "TODAY")  ; Items that have this TODO keyword
+                                  (:name "Important"
+                                         ;; Single arguments given alone
+                                         :any-tags "bills"
+                                         :priority "A")
+                                  (:name "Food-related"
+                                         ;; Multiple args given in list
+                                         :any-tags ("food" "dinner"))
+                                  (:name "Personal"
+                                         :habit t
+                                         :any-tags "personal")
+                                  ;; Filter functions supply their own section names when none are given
+                                  (:todo "WAITING")
+                                  (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
+                                         ;; Show this section at the end of the agenda. If you specified
+                                         ;; this filter last, items with these todo keywords that have
+                                         ;; priority A, B, or C would be displayed in those sections
+                                         ;; instead, because items are filtered out in the order the
+                                         ;; filters are listed.
+                                         :last t)
+                                  (:priority ("B" "C")))))))))
     (org-agenda nil "u"))
 #+END_SRC
 
