--- a/notes.org
+++ b/notes.org
@@ -800,6 +800,10 @@ Calls are in the sections above.
                   finally return (list section-name non-matching matching))))) 
 #+END_SRC
 
+** TODO Use seq
+
+Instead of writing all this custom code in =cl-loop=, I can use the new =seq= library and =seq-group-by=.
+
 ** MAYBE Rewrite the whole agenda after it's done instead
 
 Ideally, I guess, we would let the normal agenda command finish, then work on the buffer.  But this would mean that we have to avoid non-agenda-item lines, like headers, timetables, clockreports, etc.  That would likely get messy and have edge cases.  It's nice to get the list of agenda items before they are inserted, so we can filter them to begin with, but the problem with that is that we have to make a copy of the agenda command, which will get out-of-sync with newer Org versions.
