--- a/test.org
+++ b/test.org
@@ -49,10 +49,12 @@ DEADLINE: <2017-08-21 Mon -1m>
 ** TODO [#A] Spaceship lease                               :bills:spaceship:
 DEADLINE: <2017-07-26 Wed +1m>
 
-** TODO [#B] Fix flux capacitor                                  :spaceship:
+** TODO [#B] Fix flux capacitor               :spaceship:shopping:@computer:
 SCHEDULED: <2017-07-22 Sat>
 
 If I don't, the frobnicator will probably fall off halfway to Mars...
+
+Gotta buy one first, though.
 
 ** TODO Practice leaping tall buildings in a single bound         :personal:
 SCHEDULED: <2017-07-24 Mon +2d>
@@ -63,7 +65,7 @@ SCHEDULED: <2017-07-24 Mon +2d>
 ** TODO [#B] Renew membership in supervillain club
 DEADLINE: <2017-07-24 Mon>
 
-** TODO Shop for groceries                                            :food:
+** TODO Shop for groceries                             :food:shopping:@town:
 SCHEDULED: <2017-07-17 Mon>
 
 * Code
@@ -92,6 +94,9 @@ SCHEDULED: <2017-07-17 Mon>
                        ;; Single arguments given alone
                        :tags "bills"
                        :priority "A")
+                (:name "Shopping in town"
+                       ;; Boolean AND group matches items that match all subgroups
+                       :and (:tags "shopping" :tags "@town"))
                 (:name "Food-related"
                        ;; Multiple args given in list with implicit OR
                        :tags ("food" "dinner"))
