--- a/README.org
+++ b/README.org
@@ -32,36 +32,38 @@ Here's the code for the example above.  The ~org-super-agenda~ command works as 
             org-super-agenda ""
             ((org-agenda-span 'day)
              (org-super-agenda-groups
-              '(;; Each group has an implicit boolean OR operator between its selectors.
-                (:name "Today"  ; Optionally specify section name
-                       :time t  ; Items that have a time associated
-                       :todo "TODAY")  ; Items that have this TODO keyword
-                (:name "Important"
-                       ;; Single arguments given alone
-                       :tags "bills"
-                       :priority "A")
-                (:name "Shopping in town"
-                       ;; Boolean AND group matches items that match all subgroups
-                       :and (:tags "shopping" :tags "@town"))
-                (:name "Food-related"
-                       ;; Multiple args given in list with implicit OR
-                       :tags ("food" "dinner"))
-                (:name "Personal"
-                       :habit t
-                       :tags "personal")
-                (:name "Space-related"
-                       ;; Regexps match case-insensitively on the entire entry
-                       :regexp ("moon" "space" "NASA"))
-                ;; Filter functions supply their own section names when none are given
-                (:todo "WAITING")
-                (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                       ;; Show this section at the end of the agenda. If you specified
-                       ;; this filter last, items with these todo keywords that have
-                       ;; priority A, B, or C would be displayed in those sections
-                       ;; instead, because items are filtered out in the order the
-                       ;; filters are listed.
-                       :last t)
-                (:priority ("B" "C")))))))))
+                '(;; Each group has an implicit boolean OR operator between its selectors.
+                  (:name "Today"  ; Optionally specify section name
+                         :time t  ; Items that have a time associated
+                         :todo "TODAY")  ; Items that have this TODO keyword
+                  (:name "Important"
+                         ;; Single arguments given alone
+                         :tags "bills"
+                         :priority "A")
+                  (:name "Shopping in town"
+                         ;; Boolean AND group matches items that match all subgroups
+                         :and (:tags "shopping" :tags "@town"))
+                  (:name "Food-related"
+                         ;; Multiple args given in list with implicit OR
+                         :tags ("food" "dinner"))
+                  (:name "Personal"
+                         :habit t
+                         :tags "personal")
+                  (:name "Space-related (non-moon-or-planet-related)"
+                         ;; Regexps match case-insensitively on the entire entry
+                         :and (:regexp ("space" "NASA")
+                                       ;; Boolean NOT also has implicit OR between selectors
+                                       :not (:regexp "moon" :tags "planet")))
+                  ;; Filter functions supply their own section names when none are given
+                  (:todo "WAITING")
+                  (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
+                         ;; Show this section at the end of the agenda. If you specified
+                         ;; this filter last, items with these todo keywords that have
+                         ;; priority A, B, or C would be displayed in those sections
+                         ;; instead, because items are filtered out in the order the
+                         ;; filters are listed.
+                         :last t)
+                  (:priority ("B" "C")))))))))
     (org-agenda nil "u"))
 #+END_SRC
 
