--- a/notes.org
+++ b/notes.org
@@ -878,6 +878,19 @@ Test groups:
      (list :non-matching non-matching :matching matching)))
 #+END_SRC
 
+** TODO Boolean NOT
+
+#+BEGIN_SRC elisp
+  (let ((org-agenda-files '("test.org"))
+        (org-agenda-custom-commands
+         '(("u" "SUPER Agenda"
+            org-super-agenda ""
+            ((org-agenda-span 'day)
+             (org-super-agenda-groups '((:name "Non-moon space-related" :and (:regexp "space"
+                                                                                      :not (:regexp "moon"))))))))))
+    (org-agenda nil "u"))
+#+END_SRC
+
 ** MAYBE Use cl-seq
 
 I just discovered the =cl-seq= library, which includes =cl-subsetp=, which might be preferable over =seq-intersection= for testing membership.
