--- a/notes.org
+++ b/notes.org
@@ -34,39 +34,7 @@ Now, I wonder if I should keep the name ~super-agenda~ or if something more desc
 
 ** Testing code
 
-#+BEGIN_SRC elisp
-  (let ((org-agenda-files '("test.org"))
-        (org-agenda-custom-commands
-         '(("u" "SUPER Agenda"
-            org-super-agenda ""
-            ((org-agenda-span 'day)
-             (org-super-agenda-groups
-              '(;; Each group has an implicit boolean OR operator between its selectors.
-                (:name "Today"  ; Optionally specify section name
-                       :time t  ; Items that have a time associated
-                       :todo "TODAY")  ; Items that have this TODO keyword
-                (:name "Important"
-                       ;; Single arguments given alone
-                       :tags "bills"
-                       :priority "A")
-                (:name "Food-related"
-                       ;; Multiple args given in list with implicit OR
-                       :tags ("food" "dinner"))
-                (:name "Personal"
-                       :habit t
-                       :tags "personal")
-                ;; Filter functions supply their own section names when none are given
-                (:todo "WAITING")
-                (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                       ;; Show this section at the end of the agenda. If you specified
-                       ;; this filter last, items with these todo keywords that have
-                       ;; priority A, B, or C would be displayed in those sections
-                       ;; instead, because items are filtered out in the order the
-                       ;; filters are listed.
-                       :last t)
-                (:priority ("B" "C")))))))))
-    (org-agenda nil "u"))
-#+END_SRC
+Moved to the [[file:test.org][test.org]] file.
 
 *** Agenda examining
 
